Fixing icons spacing in buttons and container padding in mobile

--- a/src/componets/App/App.css
+++ b/src/componets/App/App.css
@@ -6,7 +6,7 @@
     align-items: center;
     flex-wrap: wrap;
     margin: auto;
-    /*margin-top: 30px;*/
+    margin-top: 4rem;
     /* From https://css.glass */
     background: rgba(151, 178, 223, 0.31);
     border-radius: 16px;
@@ -33,6 +33,8 @@
 @media screen and (max-width: 768px) {
     .AppContainer {
         max-width: 95%;
+        margin-top: 1rem;
+        padding: 20px 30px 0px 30px;
     }
 
     .AppContainer__info {
