--- a/src/componets/ProfileImg/profileimg.css
+++ b/src/componets/ProfileImg/profileimg.css
@@ -3,7 +3,6 @@
     max-width: 500px;
     min-width: 340px;
     min-height: 400px;
-    margin: 0 auto;
 }
 
 /***RESPONSIVE***/
